# mailgun-client

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: domains.rs  lib.rs  messages.rs
src/common/: mod.rs
tests/: integration.rs
tests/common/: mod.rs
