[package]
name = "mailgun-client"
version = "0.1.0"
authors = ["Matt Conway <mattconway55@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Wrapper for Mailgun v3 API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }