[package]
name = "mailgun-client"
version = "0.1.0"
authors = ["Matt Conway <mattconway55@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Wrapper for Mailgun v3 API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["macros"] }

[[test]]
name = "integration"
path = "tests/integration.rs"